Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,9 +6,14 @@
 trigger:
 - master
 
+
 pool:
   name: 'Windows'
-
+  demands:
+  - msbuild
+  - visualstudio
+  - vstest
+  
 variables:
   buildConfiguration: 'Release'
 steps:
